2006-04-07  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_init): Allow threads during
	httpConnectEncrypt().

2006-04-04  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.6.

2006-04-03  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPPD): Better exception when
	cupsGetPPD2() fails.

2006-03-28  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c, cupsppd.h, cupsmodule.c: Added Attribute object,
	  and PPD.attributes attribute.
	  (PPD_findAttr): Implemented.
	  (PPD_findNextAttr): Implemented.

2006-03-24  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.5.

2006-03-23  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_printTestPage): Implemented.
	(Connection_getPPDs): Handle broken UTF-8 strings, since CUPS
	1.1.x doesn't transcode PPD strings for CUPS_GET_PPDS.
	(Connection_printTestPage): Return job ID.

2006-03-22  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPPDs): Include ppd-make
	attribute.
	(Connection_getPPDs): Use Unicode objects for any string that
	comes from a PPD file.

	* cupsmodule.c (do_model_compare): Fix comparisons where one
	string is a substring of the other.

2006-03-20  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_setPrinterShared): Handle classes.
	(Connection_setPrinterJobSheets): Likewise.
	(Connection_setPrinterErrorPolicy): Likewise.
	(Connection_setPrinterOpPolicy): Likewise.
	(do_requesting_user_names): Likewise.
	(Connection_getPrinterAttributes): Likewise.

2006-03-17  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (initcups): Added IPP_MAX_NAME.

2006-03-17  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.4.

2006-03-16  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_addPrinter): Initialise local ppd
	variable.
	(docstrings): Better doc strings for addPrinterToClass and
	deletePrinterFromClass.
	(Connection_deleteClass): Implemented.
	(Connection_setPrinterInfo): Handle classes.