@@ -1,3 +1,8 @@
+2006-04-13  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (Connection_setPrinterOptionDefault):
+	Implemented.
+
 2006-04-07  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsconnection.c (Connection_init): Allow threads during
